--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
+author: 김정욱
+author_bio: 저는 김정욱입니다
+author_email: "kjh121511@naver.com"
+author_location: korea
+author_website_url: "https://kjh121511.com"
 typewrite-text: 발전하는 개발자 정욱입니다.
 
 # Experiences
@@ -72,16 +72,16 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: null
+github_username:  kjh121511
+facebook_username: null
+linkedin_username: null
+behance_username: null
+instagram_username: kjh121511
+medium_username: null
+telegram_username: null
+dribbble_username: null
+flickr_username: null
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
