--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author: 김정욱
 author_bio: 저는 김정욱입니다
 author_email: "kjh121511@naver.com"
 author_location: korea
-author_website_url: "https://kjh121511.com"
+author_website_url: "https://kjh121511.github.io"
 typewrite-text: 발전하는 개발자 정욱입니다.
 
 # Experiences
