--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ flickr_username: null
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
-# disqus_shortname: sujay-kundu
+disqus_shortname: kjh121511-github-io-1
 hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
