--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ typewrite-text: SysAdmin flying up to Cloud!
 author_work_experiences:
             - company_name: SEDUC-CE
               company_logo: seduc-ce.png
-              company_url: https://seduc.ce.gov.br.com
+              company_url: https://seduc.ce.gov.br
               designation: Senior Infrastructure Engineer
               description: Working to support all applications to education public environment in State
               visibility: true
@@ -77,13 +77,13 @@ author_project_details:
                 visibility: true
 
 # social links
-github_username:  cringerlabs
+github_username:  karlipegomes
 linkedin_username: cfgomes
 telegram_username: karlipegomes
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
-disqus_shortname: karlipegomes
+disqus_shortname: cringerlabs-com
 # hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
