--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,7 @@ linkedin_username: cfgomes
 instagram_username: cringerlabs
 twitter_username: cringerlabs
 telegram_username: karlipegomes
+youtube_username: UCoDjYdfYwyd8CO_BpJ47icw
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
