fixing site title and adding myname variable

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Karlipe Gomes
+title: CringerLabs
+myname: Karlipe Gomes
 subtitle: SysAdmin flying up to Cloud!
 description: >- # this means to ignore newlines until "baseurl:"
 
