--- a/_config.yml
+++ b/_config.yml
@@ -11,18 +11,9 @@ urls:
       url: /
     - text: About
       url: /about
-    - text: Blog
+    - text: Coding Test
       url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
-    - text: Contact
-      url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
+
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
