--- a/_config.yml
+++ b/_config.yml
@@ -59,16 +59,16 @@ author_project_details:
               
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
+twitter_username: null
+github_username:  yoonsik0926
+facebook_username: yoonsik0926
+linkedin_username: null
 behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+instagram_username: ssiki__
+medium_username: null
+telegram_username: null
+dribbble_username: null
+flickr_username: null
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
