--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ twitter_username: null
 github_username:  yoonsik0926
 facebook_username: yoonsik0926
 linkedin_username: null
-behance_username: johndoe
+behance_username: null
 instagram_username: ssiki__
 medium_username: null
 telegram_username: null
