--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.jpg
+author_logo: zoom.jpg
 author: Siki_ :)
 author_bio: 안녕하세요, 공부중인 개발자 Siki_ 입니다 :)
 author_email: "yoonsik0926@naver.com"
