--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ author_project_details:
 
 # social links
 twitter_username: null
-github_username:  yoonsik0926
+github_username:  null
 facebook_username: yoonsik0926
 linkedin_username: null
 behance_username: null
