--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author_project_details:
               - project_thumbnail: rail_traveler.PNG
                 project_title: 코레일 웹서비스 개선
                 project_description: 현재 코레인 웹서비스를 개선한 신규 웹서비스
-                project_url: https://github.com/LEEGYEOLE/Project_RailTraveler
+                project_url: https://github.com/yoonsik0926/Korail
                 visibility: true
               
 
