--- a/_config.yml
+++ b/_config.yml
@@ -94,13 +94,13 @@ paginate_path: "/blog/page/:num/"
 #   ignore:
 #     envs: ['development']
 
-# Archives
-# jekyll-archives:
-#   enabled:
-#     - categories
-#   layout: archive
-#   permalinks:
-#     category: '/category/:name/'
+Archives
+jekyll-archives:
+  enabled:
+    - categories
+  layout: archive
+  permalinks:
+    category: '/category/:name/'
 
 collections:
   products:
