updated embed fix

--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,9 @@ mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50b
 getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
 formspree_email: johndoe@gmail.com
 
+# manage releases
+olvy_organization: devlopr
+
 # syntax highlighter
 markdown: kramdown
 highlighter: rouge
