--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
 author_email: "mail@sujaykundu.com"
 author_location: India
 author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
+typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
 
 # Experiences
 author_work_experiences:
