--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,9 @@ mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50b
 getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
 formspree_email: johndoe@gmail.com
 
-# manage releases
+# releases - widget can be (sidebar, modal or embed)
 olvy_organization: devlopr
+olvy_widget_type: sidebar
 
 # syntax highlighter
 markdown: kramdown
