--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: TARGET=$(cat DEPLOY_STRATEGY)
 
       - name: check if target is valid
-        if: ! contains($VALID_TARGETS, $TARGET)
+        if: !(contains($VALID_TARGETS, $TARGET))
         run: |
           echo 'Invalid Deployment Target'
           exit 1
