--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -51,8 +51,6 @@ jobs:
           config: .github/workflows/markdownlint-config.json
           # Ignore the built website, might have some funky files
           ignore: _site/
-                  assets/
-                  node_modules/
-                  bower_components/
+          ignore: assets/
           # Try to fix basic errors
           fix: true
