--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: devlopr
+title: swalbak
 subtitle: A Portfolio Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
