Exclude Assets/* from the sitemap.

--- a/_config.yml
+++ b/_config.yml
@@ -151,6 +151,11 @@ defaults:
     values:
       layout: author
       permalink: /blog/authors/:slug
+  -
+    scope:
+      path: 'assets/**'
+    values:
+      sitemap: false
 
 # Build settings
 plugins:
