--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 author_logo: profile.png
 author: Park Peom
-author_bio: Hi, my name is Park Peom. 
+author_bio: 안녕하세요 성장하는 개발자 박범 입니다.  
 author_email: "bumprogrammer@gmail.com"
 author_location: korea
 author_website_url: "https://github.com/ParkPeom"
