--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author_bio: 안녕하세요 성장하는 개발자 박범 입니다.
 author_email: "bumprogrammer@gmail.com"
 author_location: korea
 author_website_url: "https://github.com/ParkPeom"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+typewrite-text: 깃허브 블로그에 오신것을 환영합니다  
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
