--- a/_config.yml
+++ b/_config.yml
@@ -72,22 +72,22 @@ author_project_details:
 
 # social links
 github_username:  erikpaida
-facebook_username: 
-linkedin_username: 
-behance_username: 
+facebook_username: erikpaida
+linkedin_username: e
+behance_username: e
 instagram_username: erikpaida
-medium_username: 
-telegram_username:
-dribbble_username: 
-flickr_username: 
+medium_username: e
+telegram_username:e
+dribbble_username: e
+flickr_username: e
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 # disqus_shortname: sujay-kundu
-hyvor_talk_website_id:
+hyvor_talk_website_id:476
 
 # wakatime username (coding activity)
-wakatime_username: 
+wakatime_username: erikpaida
 
 # mailchimp embedded form url (newsletter):
 mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
