--- a/_config.yml
+++ b/_config.yml
@@ -73,18 +73,18 @@ author_project_details:
 # social links
 github_username:  erikpaida
 facebook_username: erikpaida
-linkedin_username: e
-behance_username: e
+linkedin_username: ""
+behance_username: ""
 instagram_username: erikpaida
-medium_username: e
-telegram_username:e
-dribbble_username: e
-flickr_username: e
+medium_username: ""
+telegram_username: ""
+dribbble_username: ""
+flickr_username: ""
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 # disqus_shortname: sujay-kundu
-hyvor_talk_website_id:476
+hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
 wakatime_username: erikpaida
